--- a/.verb.md
+++ b/.verb.md
@@ -22,7 +22,7 @@ require('{%= name %}')(assert);
 ## API
 
 - [assert.exists](#assertexists)
-- [assert.existsSync](#assertexistsSync)
+- [assert.existsSync](#assertexistssync)
 
 ### assert.exists
 
